<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo"
    android:orientation="vertical"
    tools:context=".UI.LoginActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="350dp"
        android:layout_height="410dp"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:backgroundTint="@color/fundoCard"
        app:cardCornerRadius="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="25sp"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <com.google.android.material.card.MaterialCardView

            android:layout_width="match_parent"
            android:layout_height="335dp"
            android:layout_marginTop="75dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginTop="50dp"
                app:hintTextColor="@color/fundoCard"
                app:boxStrokeColor="@color/black">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints=""
                    android:backgroundTint="@color/white"
                    android:hint="@string/hint_email"
                    android:textCursorDrawable="@color/fundoCard"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginTop="120dp"
                app:hintTextColor="@color/fundoCard"
                app:boxStrokeColor="@color/black">>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:hint="@string/hint_password"
                    android:importantForAutofill="no"
                    android:textCursorDrawable="@color/fundoCard"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="110dp"
                android:text="@string/checkText"
                android:buttonTint="@color/fundoCard"/>

            <Button
                android:id="@+id/btLogin"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="40dp"
                android:backgroundTint="@color/fundoCard"
                android:text="@string/btLogin"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="20dp"
                android:text="@string/creatAccount" />

        </com.google.android.material.card.MaterialCardView>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>