<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.LoginActivity"
    android:orientation="vertical"
    android:background="@color/fundo">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_media_selected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarRegister"
            app:title="@string/Register"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/fundoCard"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:titleTextColor="@color/white">

        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="380dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="@color/fundoCard"
        android:layout_gravity="center|top"
        app:cardCornerRadius="10dp">

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="335dp"
            android:layout_marginTop="75dp"
            app:cardCornerRadius="15dp"
            android:backgroundTint="@color/white">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center|top"
                app:hintTextColor="@color/fundoCard"
                app:boxStrokeColor="@color/black">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints=""
                    android:backgroundTint="@color/white"
                    android:hint="@string/hint_name"
                    android:textCursorDrawable="@color/fundoCard"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_marginTop="80dp"
                android:layout_gravity="center|top"
                app:hintTextColor="@color/fundoCard"
                app:boxStrokeColor="@color/black">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints=""
                    android:backgroundTint="@color/white"
                    android:hint="@string/hint_email"
                    android:textCursorDrawable="@color/fundoCard"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_marginTop="140dp"
                android:layout_gravity="center|top"
                app:hintTextColor="@color/fundoCard"
                app:boxStrokeColor="@color/black">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:backgroundTint="@color/white"
                    android:hint="@string/hint_password"
                    android:textCursorDrawable="@color/fundoCard"
                    android:importantForAutofill="no" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btSave"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:text="@string/btSave"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="40dp"
                android:backgroundTint="@color/fundoCard"/>

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>


</LinearLayout>